Starting to work now

--- a/public/index-visualworking.html
+++ b/public/index-visualworking.html
@@ -85,6 +85,9 @@
         });
 
         wavesurfer.load(filePath);
+				// wavesurfer.on('click', () => {
+				// 	wavesurfer.play()
+				// });
       });
     }
 
